--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "angular": "^1.4.8",
     "angular-route": "^1.4.8",
+    "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.6"
   }
 }
