--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
     "angular-route": "^1.4.8",
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.6"
